# morning-bell

./: .env.example  .gitignore  AGENTS.md  README.md  config.example.yaml  plan.md  pyproject.toml
.github/workflows/: morning-briefing.yml
src/polymarket_briefing/: __init__.py  ai_summary.py  charts.py  cli.py  config.py  models.py  normalize.py  notifier.py  polymarket_client.py  scoring.py  storage.py  summarize.py  utils.py
tests/: test_charts.py  test_cli_selection.py  test_config.py  test_normalize.py  test_notifier.py  test_scoring.py  test_storage.py  test_summarize.py
