[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-morning-briefing"
version = "0.1.0"
description = "Read-only Korean morning briefing bot for Polymarket markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-httpx>=0.30",
  "ruff>=0.5",
]

[project.scripts]
polymarket-briefing = "polymarket_briefing.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_briefing"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
